--- a/clients/angular/src/app/components/layout-navbar-user-unauthenticated/layout-navbar-user-unauthenticated.component.html
+++ b/clients/angular/src/app/components/layout-navbar-user-unauthenticated/layout-navbar-user-unauthenticated.component.html
@@ -1,39 +1,8 @@
 <div class="hstack gap-3">
-  <button type="button" class="btn btn-light" (click)="openModal(modalTpl)">
+  <a class="btn btn-light" [routerLink]="['/auth/signin']">
     Sign in
-  </button>
-  <button type="button" class="btn btn-primary" (click)="openModal(modalTpl)">
+  </a>
+  <a class="btn btn-primary" [routerLink]="['/auth/signup']">
     Sign up
-  </button>
+  </a>
 </div>
-
-<ng-template #modalTpl>
-  <div class="modal-header pb-2 navbar-user__modal-header">
-    <h5 class="modal-title pull-left">
-      <i class="fa-solid fa-user-circle me-2"></i>
-      Sign in / Sign up
-    </h5>
-    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
-      <span aria-hidden="true" class="visually-hidden">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body pt-0">
-    <hr class="text-black-50">
-
-    <div class="form-check form-control-lg">
-      <input class="form-check-input" type="checkbox" [formControl]="rememberMeFormControl" id="rememberMeCheck">
-      <label class="form-check-label text-black-50" for="rememberMeCheck">
-        Remember me
-      </label>
-    </div>
-
-    <hr class="text-black-50">
-
-    <ul class="list-unstyled text-center pt-2">
-      <li class="mb-3">
-        <app-btn-connect-google [remember]="rememberMeFormControl.value ?? false"></app-btn-connect-google>
-      </li>
-    </ul>
-
-  </div>
-</ng-template>
