Add todos-lists interface

--- a/clients/angular/src/app/components/layout-navbar-user-authenticated/layout-navbar-user-authenticated.component.html
+++ b/clients/angular/src/app/components/layout-navbar-user-authenticated/layout-navbar-user-authenticated.component.html
@@ -16,13 +16,13 @@
     </div>
     <ul class="dropdown-menu dropdown-menu-end navbar-user__dropdown-menu">
       <li>
-        <a class="dropdown-item" [routerLink]="['/', 'users', 'me', 'profile']">
+        <a class="dropdown-item" [routerLink]="['/']">
           <i class="fa-regular fa-user me-2"></i>
           Profile
         </a>
       </li>
       <li>
-        <a class="dropdown-item" [routerLink]="['/', 'users', 'me', 'security']">
+        <a class="dropdown-item" [routerLink]="['/']">
           <i class="fa-solid fa-lock me-2"></i>
           Security
         </a>
