--- a/clients/angular/src/app/components/layout-navbar-user-authenticated-sm/layout-navbar-user-authenticated-sm.component.html
+++ b/clients/angular/src/app/components/layout-navbar-user-authenticated-sm/layout-navbar-user-authenticated-sm.component.html
@@ -24,13 +24,13 @@
 
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link py-2 px-0" [routerLink]="['/', 'users', 'me', 'profile']">
+        <a class="nav-link py-2 px-0" [routerLink]="['/']">
           <i class="fa-regular fa-user me-2"></i>
           Profile
         </a>
       </li>
       <li>
-        <a class="nav-link py-2 px-0" [routerLink]="['/', 'users', 'me', 'security']">
+        <a class="nav-link py-2 px-0" [routerLink]="['/']">
           <i class="fa-solid fa-lock me-2"></i>
           Security
         </a>
