--- a/clients/angular/src/app/components/layout-navbar/layout-navbar.component.html
+++ b/clients/angular/src/app/components/layout-navbar/layout-navbar.component.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-md sticky-top layout-navbar w-100">
+<header class="navbar navbar-expand-md sticky-top layout-navbar bg-white w-100">
   <nav class="container-fluid flex-wrap flex-md-nowrap" aria-label="Main navigation">
 
     <div class="layout-navbar__left d-flex flex-wrap flex-md-nowrap align-items-center">
